<package format="2">
  <name>ros1_ign_bridge</name>
  <version>0.1.0</version>
  <description>Bridge communication between ROS 1 and Ignition Transport</description>
  <license>Apache 2.0</license>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>rostest</test_depend>
</package>
