<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_gz</name>
  <version>0.246.0</version>
  <description>gz specific extensions to the launch tool.</description>

  <maintainer email="ahcorde@openrobotics.org">Alejandro Hernandez</maintainer>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <license>Apache License 2.0</license>

  <author email="caguero@openrobotics.org">Carlos Agüero</author>

  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>lifecycle_msgs</depend>
  <depend>osrf_pycommon</depend>
  <depend>rclpy</depend>
  <depend>python3-importlib-metadata</depend>
  <depend>python3-yaml</depend>
  <depend>composition_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>