<?xml version="1.0"?>
<package format="2">
  <name>ros1_ign</name>
  <version>0.6.0</version>
  <description>Meta-package containing interfaces for using ROS with <a href="https://ignitionrobotics.org">Ignition</a> simulation.</description>
  <license>Apache 2.0</license>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ros1_ign_bridge</exec_depend>
  <exec_depend>ros1_ign_gazebo_demos</exec_depend>
  <exec_depend>ros1_ign_point_cloud</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
