<package format="2">
  <name>ros1_ign_pointcloud</name>
  <version>0.1.0</version>
  <description>Point cloud utilities for using Ignition simulation with ROS 1.</description>
  <license>Apache 2.0</license>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
