<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gz_bridge</name>
  <version>0.245.0</version>
  <description>Bridge communication between ROS and Gazebo Transport</description>
  <maintainer email="adityapande@intrinsic.ai">Aditya Pande</maintainer>
  <maintainer email="ahcorde@openrobotics.org">Alejandro Hernandez</maintainer>

  <license>Apache 2.0</license>

  <author>Shivesh Khaitan</author>
  <author>Louise Poubel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <!-- Garden (default) -->
  <depend condition="$GZ_VERSION == '' or $GZ_VERSION == garden">gz-msgs9</depend>
  <depend condition="$GZ_VERSION == '' or $GZ_VERSION == garden">gz-transport12</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
